--- a/Guess/G_Email_CartAbandon_1_15941_Measurement.html
+++ b/Guess/G_Email_CartAbandon_1_15941_Measurement.html
@@ -355,11 +355,6 @@
         font-family: 'Century Gothic', 'CenturyGothic', Futura, Verdana, sans-serif;
       }
 
-      a {
-        color: #333333;
-        text-decoration: underline;
-      }
-
 
 
       h1 a,
@@ -696,17 +691,17 @@
                             <td style="word-break:break-word;-webkit-hyphens:none;-moz-hyphens:none;hyphens:none;border-collapse:collapse !important;vertical-align:top;margin-top:0;margin-bottom:0;margin-right:0;margin-left:0;text-align:left;font-size:9px;line-height:12px;padding-top:0px;padding-bottom:0px;padding-left:0px;position:relative;padding-right:0px;">
                                 <table style="width:100%; ">
                                   <tbody>
+            <! ---- Title ---- >
                                     <tr>
                                       <td>
-            <! ---- Title ---- >
                                         <h1 style="text-align: center; border: 0px; font-size: 48px; color: #000000">
                                           ALMOST YOURS
                                         </h1>
                                       </td>
                                     </tr>
+            <! ---- Subtitle ---- >
                                     <tr>
                                       <td>
-            <! ---- Subtitle ---- >
                                         <p style="text-align: center; letter-spacing:.23em;font-size: 17px; color: #000000">
                                           These are still waiting for you,
                                         </p>
@@ -715,9 +710,31 @@
                                         </p>
                                       </td>
                                     </tr>
+            <! ---- Single Image ---- >
                                     <tr>
                                       <td style="text-align: center">
                                         <img style="margin-top: 40px" src="http://i.imgur.com/jnuH4rA.png">
+                                      </td>
+                                    </tr>
+            <! ---- Description ---- >
+                                    <tr>
+                                    <td>
+                                      <p style="text-align: center; margin-top: 29px; font-size: 15px;color: #000000; letter-spacing:.20em; text-transform: uppercase;">
+                                        Charlene shirred dress
+                                      </p>
+                                      <p style="text-align: center; margin-top: 20px; font-size: 15px;color: #000000; letter-spacing:.20em;"">
+                                        $89.00
+                                      </p>
+                                    </td>
+                                    </tr>
+            <! ---- CTA ---- >
+                                    <tr>
+                                      <td style="text-align: center">
+                                        <a>
+                                          <p style="text-align: center; line-height:68px; border-top: 3px solid; border-right: 3px solid; border-left: 3px solid; border-bottom: 3px solid; border-top-color: #000000; border-right-color: #000000; border-left-color: #000000; border-bottom-color: #000000; width: 386px; color: #000000; font-size: 17px;">
+                                            COMPLETE ORDER
+                                          </p>
+                                        </a>
                                       </td>
                                     </tr>
                                   </tbody>
