--- a/Guess/G_Email_CartAbandon_1_15941.html
+++ b/Guess/G_Email_CartAbandon_1_15941.html
@@ -58,9 +58,6 @@ img {
   outline:none;
   text-decoration:none;
   -ms-interpolation-mode: bicubic;
-  width: auto;
-  max-width: 100%;
-  float: left;
   clear: both;
   display: block;
 }
@@ -304,7 +301,6 @@ body, table.body, h1, h2, h3, h4, h5, h6, p, td {
 
 h1, h2, h3, h4, h5, h6, p {
   font-family:'Century Gothic', 'CenturyGothic', Futura, Verdana, sans-serif;
-  font-weight: normal;
 }
 
 h1, h2, h3, h4, h5, h6 {
@@ -316,21 +312,8 @@ h1 {font-size: 22px;
     text-align: center;
     font-weight: 500;
     display: block;
-    padding: 20px 0px;
-    margin: 10px auto;
-    max-width: 335px;
     letter-spacing: 0.15em;}
-h2{
-    font-size: 23px;
-    text-transform: uppercase;
-    letter-spacing: 0.2em;
-    text-align: center;
-    border-top: 2px solid #eeeeee;
-    border-bottom: 0px solid;
-    padding: 15px 0px;
-    line-height: 2;
-    vertical-align: middle;
-    }
+
     h3{
       text-align:center;
       font-size:11px;
@@ -732,22 +715,176 @@ body.outlook p {
 
                   <!-- begin CONTENT -->
 
-                      <table style="width: 100%">
+            <! --- SECTION 1 ---->
+
+                      <table id='section1' style="border-spacing:0;border-collapse:collapse;vertical-align:top;text-align:left;padding-top:0px;padding-bottom:0px;padding-right:0px;padding-left:0px;width:100%;position:relative;display:inline-table !important;">
                         <tbody>
-                          <tr>
-                            <td>
-                              <table style="width: 100%">
+                          <tr style="padding-top:0;padding-bottom:0;padding-right:0;padding-left:0;vertical-align:top;text-align:left;">
+                            <td style="border-spacing:0;border-collapse:collapse;word-break:break-word;-webkit-hyphens:none;-moz-hyphens:none;hyphens:none;border-collapse:collapse !important;vertical-align:top;margin-top:0;margin-bottom:0;margin-right:0;margin-left:0;text-align:left;font-size:9px;line-height:12px;padding-top:0px;padding-bottom:0px;padding-left:0px;position:relative;padding-right:0px;">
+                              <table style="width:100%; ">
                                 <tbody>
+          <! ---- Title ---- >
                                   <tr>
                                     <td>
-                                      <img src="INSERT IMAGE LINK BETWEEN THESE QUOTATION MARKS" style="width:100%;">
+                                      <p style="text-align: center; font-size: 48px; color: #000000; letter-spacing: 0.25em; margin-top: 50px; line-height: 0.9; margin-bottom: 40px;">
+                                        ALMOST YOURS
+                                      </p>
                                     </td>
                                   </tr>
                                 </tbody>
+                              </table>
+          <! ---- Subtitle ---- >
+                              <table style='width:100%'>
+                                <tbody>
+                                  <tr>
+                                    <td>
+                                      <p style="text-align: center; letter-spacing:.20em;font-size: 17px; color: #000000;">
+                                        These are still waiting for you,
+                                      </p>
+                                      <p style="text-align: center; letter-spacing:.20em;font-size: 17px; color: #000000; margin-bottom: 50px;">
+                                        and are just a click away.
+                                      </p>
+                                    </td>
+                                  </tr>
+                                </tbody>
+                              </table>
+          <! ---- Single Image ---- >
+                              <table style='width:100%'>
+                                <tbody>
+                                  <tr>
+                                    <td style="text-align: center">
+                                      <a href="#">
+                                        <img style="margin-right: auto; margin-left: auto; width: 388px;" src="http://i.imgur.com/jnuH4rA.png">
+                                      </a>
+                                    </td>
+                                  </tr>
+                                </tbody>
+                              </table>
+          <! ---- Description ---- >
+                              <table style='width:100%'>
+                                <tbody>
+                                  <tr>
+                                    <td>
+                                      <p style="text-align: center; margin-top: 30px; margin-bottom: 20px; font-size: 15px;color: #000000; letter-spacing:.18em; text-transform: uppercase; line-height: 16pt;">
+                                        Charlene shirred dress
+                                      </p>
+                                      <p style="text-align: center; font-size: 15px;color: #000000; letter-spacing:.18em; margin-bottom: 50px; line-height: 16pt;">
+                                        $89.00
+                                      </p>
+                                    </td>
+                                  </tr>
+                                </tbody>
+                              </table>
+          <! ---- CTA ---- >
+                              <table style="border-spacing:0;border-collapse:collapse;vertical-align:middle;text-align:left;padding-top:0px;padding-bottom:0px;padding-right:0px;padding-left:0px;width:100%;position:relative;display:block;">
+                                <tbody>
+                                  <tr>
+                                    <td style='width:98px'>
+                                    </td>
+                                    <td style="text-align: center;border-spacing:0;border-collapse:collapse; border-top-style: solid; border-top-width: 3px; border-top-color: #000000; border-right-style: solid; border-right-width: 3px; border-right-color: #000000; width: 386px; border-bottom-style: solid; border-bottom-width: 3px; border-bottom-color: #000000; border-left-style: solid; border-left-width: 3px; border-left-color: #000000; padding-bottom: 31px; padding-top: 31px; font-family:'Century Gothic', 'CenturyGothic', Futura, Verdana, sans-serif;">
+                                      <a href="#" style="text-decoration: none; display:block; letter-spacing:.20em; font-size: 17px; color: #000000;">
+                                        <spam>COMPLETE ORDER</spam>
+                                      </a>
+                                    </td>
+                                    <td style='width:98px'>
+                                    </td>
+                                  </tr>
+                                </tbody>
+                              </table>
                             </td>
                           </tr>
                         </tbody>
                       </table>
+<! ---- END SECTION 1 ---- >
+<! ---- Space Between sections ---- >
+                      <table style="border-spacing:0;width:100%;position:relative;display:block;">
+                        <tbody>
+                          <tr>
+                            <td>
+                              <table style="border-spacing:0;border-collapse:collapse;vertical-align:middle;text-align:left;padding-top:0px;padding-bottom:0px;padding-right:0px;padding-left:0px;width:100%;position:relative;display:block;">
+                                <tbody>
+                                  <tr>
+                                    <td style="height: 100px; word-break:break-word;-webkit-hyphens:none;-moz-hyphens:none;hyphens:none;border-collapse:collapse !important;vertical-align:top;margin-top:0;margin-bottom:0;margin-right:0;margin-left:0;text-align:left;font-size:9px;line-height:12px;padding-top:5px;padding-bottom:25px;padding-right:0;padding-left:0;">&nbsp;
+                                    </td>
+                                  </tr>
+                              </table>
+                            </td>
+                          </tr>
+                        </tbody>
+                      </table>
+<! ---- SECTION 2 ---- >
+                      <table style='width:100%;'>
+                        <tbody>
+                          <tr>
+                            <td>
+<! ---- Subtitle ---- >
+                              <table style='width:100%;'>
+                                <tbody>
+                                  <tr>
+                                    <td>
+                                      <p style="line-height: initial; text-transform: uppercase; text-align: center; font-size: 33px; color: #000000; margin-bottom: 20px;">
+                                        You might also like
+                                      </p>
+                                    </td>
+                                  </tr>
+                                </tbody>
+                              </table>
+<! ---- FIRST TWO IMAGES ---- >
+                              <table style="border-spacing:0;border-collapse:collapse;vertical-align:top;text-align:left;padding-top:0px;padding-bottom:0px;padding-right:0px;padding-left:0px;width:100%;position:relative;">
+                                <tbody>
+                                  <tr style="padding-top:0;padding-bottom:0;padding-right:0;padding-left:0;vertical-align:top;text-align:left;">
+                                    <td style="word-break:break-word;-webkit-hyphens:none;-moz-hyphens:none;hyphens:none;border-collapse:collapse !important;vertical-align:top;margin-top:0;margin-bottom:0;margin-right:0;margin-left:0;text-align:left;font-size:9px;line-height:12px;padding-top:0px;padding-bottom:0px;padding-left:0px;position:relative;padding-right:0px;">
+                                      <table style="width: 100%;">
+                                        <tbody>
+                                          <tr>
+                                            <td style="padding-bottom: 4em;">
+                                              <a href="#">
+                                                <img src="http://i.imgur.com/0Gtv0Hy.png" style="margin-right: auto; margin-left: auto;">
+                                              </a>
+                                            </td>
+                                            <td style="padding-bottom: 4em;">
+                                              <a href="#">
+                                                <img src="http://i.imgur.com/0Gtv0Hy.png" style="margin-right: auto; margin-left: auto;">
+                                              </a>
+                                            </td>
+                                          </tr>
+                                        </tbody>
+                                      </table>
+                                    </td>
+                                  </tr>
+                                </tbody>
+                              </table>
+<! ---- SECOND TWO IMAGES ---->
+                              <table style="border-spacing:0;border-collapse:collapse;vertical-align:top;text-align:left;padding-top:0px;padding-bottom:0px;padding-right:0px;padding-left:0px;width:100%;position:relative;">
+                                <tbody>
+                                  <tr style="padding-top:0;padding-bottom:0;padding-right:0;padding-left:0;vertical-align:top;text-align:left;">
+                                    <td style="word-break:break-word;-webkit-hyphens:none;-moz-hyphens:none;hyphens:none;border-collapse:collapse !important;vertical-align:top;margin-top:0;margin-bottom:0;margin-right:0;margin-left:0;text-align:left;font-size:9px;line-height:12px;padding-top:0px;padding-bottom:0px;padding-left:0px;position:relative;padding-right:0px;">
+                                      <table style="width: 100%;">
+                                        <tbody>
+                                          <tr>
+                                            <td style="padding-bottom: 4em;">
+                                              <a href="#">
+                                                <img src="http://i.imgur.com/0Gtv0Hy.png" style="margin-right: auto; margin-left: auto;">
+                                              </a>
+                                            </td>
+                                            <td style="padding-bottom: 4em;">
+                                              <a href="#">
+                                                <img src="http://i.imgur.com/0Gtv0Hy.png" style="margin-right: auto; margin-left: auto;">
+                                              </a>
+                                            </td>
+                                          </tr>
+                                        </tbody>
+                                      </table>
+                                    </td>
+                                  </tr>
+                                </tbody>
+                              </table>
+                            </td>
+                          </tr>
+                        </tbody>
+                      </table>
+
+            <!-- end CONTENT -->
 
                   <!-- end CONTENT -->
 
