new template working

--- a/Guess/CA/New-Template-Guess-CA-Default.html
+++ b/Guess/CA/New-Template-Guess-CA-Default.html
@@ -636,12 +636,12 @@ body.outlook p {
             <!-- begin CONTAINER -->
 
               <table class="container" style="border-spacing:0;border-collapse:collapse;padding-top:0;padding-bottom:0;padding-right:0;padding-left:0;vertical-align:top;width:582px;margin-top:0;margin-bottom:0;margin-right:auto;margin-left:auto;text-align:inherit;" >
-                <tbody>
-                  <tr style="padding-top:0;padding-bottom:0;padding-right:0;padding-left:0;vertical-align:top;text-align:left;" >
+                <tbody style="display: block">
+                  <tr style="padding-top:0;padding-bottom:0;padding-right:0;padding-left:0;vertical-align:top;text-align:left;display: block" >
                     <td style="word-break:break-word;-webkit-hyphens:none;-moz-hyphens:none;hyphens:none;border-collapse:collapse !important;vertical-align:top;padding-top:0;padding-bottom:0;padding-right:0;padding-left:0;margin-top:0;margin-bottom:0;margin-right:0;margin-left:0;text-align:left;font-size:9px;line-height:12px;" >
                       <table class="row preheader" style="border-spacing:0;border-collapse:collapse;vertical-align:top;text-align:left;padding-top:0px;padding-bottom:0px;padding-right:0px;padding-left:0px;width:100%;position:relative;display:block;" >
-                        <tbody>
-                          <tr style="padding-top:0;padding-bottom:0;padding-right:0;padding-left:0;vertical-align:top;text-align:left;" >
+                        <tbody style="display: block">
+                          <tr style="padding-top:0;padding-bottom:0;padding-right:0;padding-left:0;vertical-align:top;text-align:left;display: block" >
                             <td class="wrapper last" style="word-break:break-word;-webkit-hyphens:none;-moz-hyphens:none;hyphens:none;border-collapse:collapse !important;vertical-align:top;margin-top:0;margin-bottom:0;margin-right:0;margin-left:0;text-align:left;font-size:9px;line-height:12px;padding-top:0px;padding-bottom:0px;padding-left:0px;position:relative;padding-right:0px;" >
                               <table class="twelve columns" style="border-spacing:0;border-collapse:collapse;padding-top:0;padding-bottom:0;padding-right:0;padding-left:0;vertical-align:top;text-align:left;margin-top:0;margin-bottom:0;margin-right:auto;margin-left:auto;width:582px;" >
                                 <tbody>
@@ -671,7 +671,7 @@ body.outlook p {
                   <!-- LOGO -->
 
                       <table class="row" style="border-spacing:0;border-collapse:collapse;vertical-align:top;text-align:left;padding-top:0px;padding-bottom:0px;padding-right:0px;padding-left:0px;width:100%;position:relative;display:block;" >
-                        <tbody>
+                        <tbody style="display: block">
                           <tr style="padding-top:0;padding-bottom:0;padding-right:0;padding-left:0;vertical-align:top;text-align:left;" >
                             <td class="wrapper last" style="word-break:break-word;-webkit-hyphens:none;-moz-hyphens:none;hyphens:none;border-collapse:collapse !important;vertical-align:top;margin-top:0;margin-bottom:0;margin-right:0;margin-left:0;text-align:left;font-size:9px;line-height:12px;padding-top:0px;padding-bottom:0px;padding-left:0px;position:relative;padding-right:0px;">
                               <table class="twelve columns" style="border-spacing:0;border-collapse:collapse;padding-top:0;padding-bottom:0;padding-right:0;padding-left:0;vertical-align:top;text-align:left;margin-top:0;margin-bottom:0;margin-right:auto;margin-left:auto;width:582px;" >
@@ -693,8 +693,8 @@ body.outlook p {
               <!-- FSO -->
 
                       <table class="row FSO" style="border-spacing:0;border-collapse:collapse;vertical-align:top;text-align:left;padding-top:0px;padding-bottom:0px;padding-right:0px;padding-left:0px;width:100%;position:relative;display:inline-table !important;" >
-                        <tbody>
-                          <tr style="padding-top:0;padding-bottom:0;padding-right:0;padding-left:0;vertical-align:top;text-align:left;">
+                        <tbody style="display: block">
+                          <tr style="padding-top:0;padding-bottom:0;padding-right:0;padding-left:0;vertical-align:top;text-align:left;display: block">
                             <td class="wrapper last" style="border-top-width:1px;border-top-style:solid;border-top-color:#666666;border-bottom-width:1px;border-bottom-style:solid;border-bottom-color:#666666;word-break:break-word;-webkit-hyphens:auto;-moz-hyphens:auto;hyphens:auto;border-collapse:collapse !important;vertical-align:top;margin-top:0;margin-bottom:0;margin-right:0;margin-left:0;text-align:left;font-size:9px;line-height:12px;padding-top:0;padding-bottom:0px;padding-left:0px;position:relative;padding-right:0px;" >
                               <table class="twelve columns" style="border-spacing:0;border-collapse:collapse;padding-top:0;padding-bottom:0;padding-right:0;padding-left:0;vertical-align:top;text-align:left;margin-top:0;margin-bottom:0;margin-right:auto;margin-left:auto;width:582px;" >
                                 <tbody>
@@ -733,14 +733,16 @@ body.outlook p {
                   <!-- begin CONTENT -->
 
                       <table style="width: 100%">
-                        <tbody>
-                          <tr>
+                        <tbody style="display: block">
+                          <tr style="display: block">
                             <td>
                               <table style="width: 100%">
                                 <tbody>
                                   <tr>
                                     <td>
-                                      <img src="INSERT IMAGE LINK BETWEEN THESE QUOTATION MARKS" style="width:100%;">
+                                      <a href="http://www.guess.ca/en/">
+                                        <img src="http://s7d5.scene7.com/is/image/Guess/WG_Fall2016_04?$responsive_md$&wid=956" width="582" style="width:100%";>
+                                      </a>
                                     </td>
                                   </tr>
                                 </tbody>
@@ -755,8 +757,8 @@ body.outlook p {
 
   <! ---- NEW ARRIVALS BUTTON ---- >
                       <table class="row" style="border-spacing:0;border-collapse:collapse;vertical-align:top;text-align:left;padding-top:0px;padding-bottom:0px;padding-right:0px;padding-left:0px;width:100%;position:relative;display:inline-table !important;">
-                        <tbody>
-                          <tr style="padding-top:0;padding-bottom:0;padding-right:0;padding-left:0;vertical-align:top;text-align:left;">
+                        <tbody style="display: block">
+                          <tr style="padding-top:0;padding-bottom:0;padding-right:0;padding-left:0;vertical-align:top;text-align:left;display: block">
                             <td class="wrapper last" style="word-break:break-word;-webkit-hyphens:auto;-moz-hyphens:auto;hyphens:auto;border-collapse:collapse !important;vertical-align:top;margin-top:0;margin-bottom:0;margin-right:0;margin-left:0;text-align:left;font-size:9px;line-height:12px;padding-top:0;padding-bottom:0px;padding-left:0px;position:relative;padding-right:0px;" >
                               <table class="twelve columns" style="border-spacing:0;border-collapse:collapse;padding-top:0;padding-bottom:0;padding-right:0;padding-left:0;vertical-align:top;text-align:left;margin-top:0;margin-bottom:0;margin-right:auto;margin-left:auto;width:582px;" >
                                 <tbody>
@@ -780,8 +782,8 @@ body.outlook p {
 
   <! ---- SALE BUTTON ---- >
                       <table class="row" style="border-spacing:0;border-collapse:collapse;vertical-align:top;text-align:left;padding-top:0px;padding-bottom:0px;padding-right:0px;padding-left:0px;width:100%;position:relative;display:inline-table !important;" >
-                        <tbody>
-                          <tr style="padding-top:0;padding-bottom:0;padding-right:0;padding-left:0;vertical-align:top;text-align:left;" >
+                        <tbody style="display: block">
+                          <tr style="padding-top:0;padding-bottom:0;padding-right:0;padding-left:0;vertical-align:top;text-align:left;display: block" >
                             <td class="wrapper last" style="word-break:break-word;-webkit-hyphens:auto;-moz-hyphens:auto;hyphens:auto;border-collapse:collapse !important;vertical-align:top;margin-top:0;margin-bottom:0;margin-right:0;margin-left:0;text-align:left;font-size:9px;line-height:12px;padding-top:0;padding-bottom:0px;padding-left:0px;position:relative;padding-right:0px;" >
                               <table class="twelve columns" style="border-spacing:0;border-collapse:collapse;padding-top:0;padding-bottom:0;padding-right:0;padding-left:0;vertical-align:top;text-align:left;margin-top:0;margin-bottom:0;margin-right:auto;margin-left:auto;width:582px;" >
                                 <tbody>
@@ -805,8 +807,8 @@ body.outlook p {
 
   <! ---- FIND A STORE BUTTON ---- >
                       <table class="row" style="border-spacing:0;border-collapse:collapse;vertical-align:top;text-align:left;padding-top:0px;padding-bottom:0px;padding-right:0px;padding-left:0px;width:100%;position:relative;display:inline-table !important">
-                        <tbody>
-                          <tr style="padding-top:0;padding-bottom:0;padding-right:0;padding-left:0;vertical-align:top;text-align:left;" >
+                        <tbody style="display: block">
+                          <tr style="padding-top:0;padding-bottom:0;padding-right:0;padding-left:0;vertical-align:top;text-align:left;display: block" >
                             <td class="wrapper last" style="word-break:break-word;-webkit-hyphens:auto;-moz-hyphens:auto;hyphens:auto;border-collapse:collapse !important;vertical-align:top;margin-top:0;margin-bottom:0;margin-right:0;margin-left:0;text-align:left;font-size:9px;line-height:12px;padding-top:0;padding-bottom:0px;padding-left:0px;position:relative;padding-right:0px;" >
                               <table class="twelve columns" style="border-spacing:0;border-collapse:collapse;padding-top:0;padding-bottom:0;padding-right:0;padding-left:0;vertical-align:top;text-align:left;margin-top:0;margin-bottom:0;margin-right:auto;margin-left:auto;width:582px;" >
                                 <tbody>
@@ -830,8 +832,8 @@ body.outlook p {
 
   <!-- GUESS List -->
                       <table class="row" style="background-color:#000000;font-family:'Century Gothic', CenturyGothic, Futura, Verdana, sans-serif;border-spacing:0;border-collapse:collapse;vertical-align:top;text-align:left;padding-top:0px;padding-bottom:0px;padding-right:0px;padding-left:0px;width:100%;position:relative;display:inline-table !important;">
-                        <tbody>
-                          <tr style="padding-top:0;padding-bottom:0;padding-right:0;padding-left:0;vertical-align:top;text-align:left;" >
+                        <tbody style="display: block">
+                          <tr style="padding-top:0;padding-bottom:0;padding-right:0;padding-left:0;vertical-align:top;text-align:left;display: block" >
                             <td class="wrapper last" style="word-break:break-word;-webkit-hyphens:none;-moz-hyphens:none;hyphens:none;border-collapse:collapse !important;vertical-align:top;margin-top:0;margin-bottom:0;margin-right:0;margin-left:0;text-align:left;font-size:9px;line-height:12px;padding-top:0px;padding-bottom:0px;padding-left:0px;position:relative;padding-right:0px;">
                               <table class="twelve columns" style="border-spacing:0;border-collapse:collapse;padding-top:0;padding-bottom:0;padding-right:0;padding-left:0;vertical-align:top;text-align:left;margin-top:0;margin-bottom:0;margin-right:auto;margin-left:auto;width:582px;">
                                 <tbody>
@@ -866,8 +868,8 @@ body.outlook p {
 
   <!---- SPACER ---->
                       <table class="row social-media" style="border-spacing:0;border-collapse:collapse;vertical-align:top;text-align:left;background-color:#000000;padding-top:0px;padding-bottom:0px;padding-right:0px;padding-left:0px;width:100%;position:relative;display:block;">
-                        <tbody>
-                          <tr style="padding-top:0;padding-bottom:0;padding-right:0;padding-left:0;vertical-align:top;text-align:left;">
+                        <tbody style="display: block">
+                          <tr style="padding-top:0;padding-bottom:0;padding-right:0;padding-left:0;vertical-align:top;text-align:left;display: block">
                             <td class="wrapper last" style="word-break:break-word;-webkit-hyphens:none;-moz-hyphens:none;hyphens:none;border-collapse:collapse !important;vertical-align:top;margin-top:0;margin-bottom:0;margin-right:0;margin-left:0;text-align:left;font-size:9px;line-height:12px;padding-top:0px;padding-bottom:0px;padding-left:0px;position:relative;padding-right:0px;">
                               <table class="twelve columns margin-bottom25" style="background-color:#000000;background-image:none;background-repeat:repeat;background-position:top left;background-attachment:scroll;border-spacing:0;border-collapse:collapse;padding-top:0;padding-bottom:0;padding-right:0;padding-left:0;vertical-align:top;text-align:left;margin-top:0;margin-bottom:25px;margin-right:auto;margin-left:auto;width:582px;" >
                                 <tbody>
@@ -926,8 +928,8 @@ body.outlook p {
                             <td>
     <!-- PRIVACY | CONTACT -->
                               <table class="row" style="border-spacing:0;border-collapse:collapse;padding-top:0;padding-bottom:0;padding-right:0;padding-left:0;vertical-align:top;text-align:center;margin-top:0;margin-bottom:0;margin-right:auto;margin-left:auto;width:582px;border-top-width:1px;border-top-style:solid;border-top-color: #ffffff;">
-                                <tbody>
-                                  <tr style="padding-top:0;padding-bottom:0;padding-right:0;padding-left:0;vertical-align:top;text-align:center;">
+                                <tbody style="display: block">
+                                  <tr style="padding-top:0;padding-bottom:0;padding-right:0;padding-left:0;vertical-align:top;text-align:center;display: block">
                                     <td  class="wrapper last" style="word-break:break-word;-webkit-hyphens:none;-moz-hyphens:none;hyphens:none;border-collapse:collapse !important;vertical-align:top;margin-top:0;margin-bottom:0;margin-right:0;margin-left:0;text-align:center;font-size:9px;line-height:12px;padding-top:0px;padding-bottom:0px;padding-left:0px;position:relative;padding-right:0px;">
                                       <table class="twelve" style="background-color:#000000;background-image:none;background-repeat:repeat;background-position:top left;background-attachment:scroll;border-spacing:0;border-collapse:collapse;padding-top:0;padding-bottom:0;padding-right:0;padding-left:0;vertical-align:top;text-align:left;margin-top:0;margin-bottom:0;margin-right:auto;margin-left:auto;width:582px;">
                                         <tbody>
