making sure last changes are commited

--- a/Guess/US/New-Template-Guess-US-Default.html
+++ b/Guess/US/New-Template-Guess-US-Default.html
@@ -623,10 +623,18 @@ body.outlook p {
 
   table.twelve td.two-pt-five { width: 105px; }
   table.twelve td.two-pt-five center { min-width: 105px; }
-
+  .gmailfix {
+    display:none;
+    display:none!important;
+  }
   </style>
 </head>
   <body style="width:100% !important;min-width:100%;-webkit-text-size-adjust:100%;-ms-text-size-adjust:100%;padding-top:0;padding-bottom:0;padding-right:0;padding-left:0;margin-top:0;margin-bottom:0;margin-right:0;margin-left:0;text-align:left;font-size:9px;line-height:12px;" >
+    <div class="gmailfix" style="white-space:nowrap; font:15px courier; line-height:0;">
+      &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp;
+      &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp;
+      &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp;
+    </div>
     <table class="body" style="border-spacing:0;border-collapse:collapse;vertical-align:top;height:100%;width:100%;padding-top:0;padding-bottom:0;padding-right:0;padding-left:0;margin-top:0;margin-bottom:0;margin-right:0;margin-left:0;text-align:left;font-size:9px;line-height:12px;" >
       </tbody>
         <tr style="padding-top:0;padding-bottom:0;padding-right:0;padding-left:0;vertical-align:top;text-align:left;" >
@@ -639,7 +647,7 @@ body.outlook p {
                 <tbody>
                   <tr style="padding-top:0;padding-bottom:0;padding-right:0;padding-left:0;vertical-align:top;text-align:left;" >
                     <td style="word-break:break-word;-webkit-hyphens:none;-moz-hyphens:none;hyphens:none;border-collapse:collapse !important;vertical-align:top;padding-top:0;padding-bottom:0;padding-right:0;padding-left:0;margin-top:0;margin-bottom:0;margin-right:0;margin-left:0;text-align:left;font-size:9px;line-height:12px;" >
-                      <table class="row preheader" style="border-spacing:0;border-collapse:collapse;vertical-align:top;text-align:left;padding-top:0px;padding-bottom:0px;padding-right:0px;padding-left:0px;width:100%;position:relative;display:block;" >
+                      <table class="row preheader" style="border-spacing:0;border-collapse:collapse;vertical-align:top;text-align:left;padding-top:0px;padding-bottom:0px;padding-right:0px;padding-left:0px;width:100%;position:relative;display:block;">
                         <tbody>
                           <tr style="padding-top:0;padding-bottom:0;padding-right:0;padding-left:0;vertical-align:top;text-align:left;" >
                             <td class="wrapper last" style="word-break:break-word;-webkit-hyphens:none;-moz-hyphens:none;hyphens:none;border-collapse:collapse !important;vertical-align:top;margin-top:0;margin-bottom:0;margin-right:0;margin-left:0;text-align:left;font-size:9px;line-height:12px;padding-top:0px;padding-bottom:0px;padding-left:0px;position:relative;padding-right:0px;" >
@@ -706,8 +714,8 @@ body.outlook p {
                                   </tr>
                                   <tr style="padding-top:0;padding-bottom:0;padding-right:0;padding-left:0;vertical-align:top;text-align:left;" >
                                     <td width="582" style="padding-top:10px;padding-bottom:10px;padding-right:0px;padding-left:0px;word-break:break-word;-webkit-hyphens:auto;-moz-hyphens:auto;hyphens:auto;border-collapse:collapse !important;vertical-align:top;margin-top:0;margin-bottom:0;margin-right:0;margin-left:0;text-align:left;font-size:9px;line-height:12px;" >
-                                      <h4 style="padding-top:0;padding-bottom:0;padding-right:0;padding-left:0;margin-top:0;margin-bottom:0;margin-right:0;margin-left:0;color:#666666;font-family:'Century Gothic', CenturyGothic, Futura, Verdana, sans-serif;word-break:normal;text-align:center;font-size:10px;text-decoration:none;font-weight:normal;text-transform:uppercase;letter-spacing:.15em;line-height:1.5;" >
-                                        <a  href="http://shop.guess.com/en/" alt="Free Shipping Banner" _label="Header - FSO Banner" style="line-height:150%!important;color:#000000;text-decoration:none;" >
+                                      <h4 style="padding-top:10px;padding-bottom:10px;padding-right:0;padding-left:0;margin-top:0;margin-bottom:0;margin-right:0;margin-left:0;color:#666666;font-family:'Century Gothic', CenturyGothic, Futura, Verdana, sans-serif;word-break:normal;text-align:center;font-size:10px;text-decoration:none;font-weight:normal;text-transform:uppercase;letter-spacing:.15em;line-height:1.5;" >
+                                        <a  href="http://shop.guess.com/en/" alt="Free Shipping Banner" _label="Header - FSO Banner" style="font-size: 14px; line-height:150%!important;color:#000000;text-decoration:none;" >
                                           Free Shipping* on Orders $99+
                                         </a>
                                       </h4>
@@ -839,7 +847,7 @@ body.outlook p {
                               <table class="twelve columns" style="border-spacing:0;border-collapse:collapse;padding-top:0;padding-bottom:0;padding-right:0;padding-left:0;vertical-align:top;text-align:left;margin-top:0;margin-bottom:0;margin-right:auto;margin-left:auto;width:582px;">
                                 <tbody>
                                   <tr style="padding-top:0;padding-bottom:0;padding-right:0;padding-left:0;vertical-align:top;text-align:left;" >
-                                    <td style="text-align:center;mso-line-height-rule:exactly;line-height:40px;padding-top:30px;padding-bottom:25px;word-break:break-word;-webkit-hyphens:none;-moz-hyphens:none;hyphens:none;border-collapse:collapse !important;vertical-align:top;margin-top:0;margin-bottom:0;margin-right:0;margin-left:0;font-size:9px;padding-right:0;padding-left:0;text-transform:uppercase;font-family:'Century Gothic', 'CenturyGothic', Futura, Verdana, sans-serif;" >
+                                    <td style="text-align:center;mso-line-height-rule:exactly;line-height:40px;padding-top:20px;padding-bottom:15px;word-break:break-word;-webkit-hyphens:none;-moz-hyphens:none;hyphens:none;border-collapse:collapse !important;vertical-align:top;margin-top:0;margin-bottom:0;margin-right:0;margin-left:0;font-size:9px;padding-right:0;padding-left:0;text-transform:uppercase;font-family:'Century Gothic', 'CenturyGothic', Futura, Verdana, sans-serif;" >
                                       <a  href="https://shop.guess.com/en/Account/Register?IsLoyalty=True" style="text-decoration:none;display:block;width:100%;color:#ff0000;">
                                         <span style="font-size:20px;letter-spacing:.36em;" >JOIN GUESS LIST</span>
                                       </a>
