finishing first templates

--- a/Guess/CartAbandon/3/G_Email_CartAbandon_3_15941_US.html
+++ b/Guess/CartAbandon/3/G_Email_CartAbandon_3_15941_US.html
@@ -751,7 +751,7 @@ body.outlook p {
                                   <tr>
                                     <td>
                                       <p style="text-align: center; font-size: 48px; color: #000000; letter-spacing: 0.25em; margin-top: 50px; line-height: 0.9; margin-bottom: 40px;">
-                                        ALMOST YOURS
+                                        NOW OR NEVER
                                       </p>
                                     </td>
                                   </tr>
@@ -763,7 +763,7 @@ body.outlook p {
                                   <tr>
                                     <td>
                                       <p style="text-align: center; letter-spacing:.20em;font-size: 17px; color: #000000;">
-                                        These are still waiting for you,
+                                        Hurry, we can't keep your items
                                       </p>
                                       <p style="text-align: center; letter-spacing:.20em;font-size: 17px; color: #000000; margin-bottom: 50px;">
                                         and are just a click away.
@@ -773,18 +773,26 @@ body.outlook p {
                                 </tbody>
                               </table>
           <! ---- Double Image ---- >
-                              <table style='width:100%'>
+                              <table style="border-spacing:0;border-collapse:collapse;vertical-align:top;text-align:left;padding-top:0px;padding-bottom:0px;padding-right:0px;padding-left:0px;width:100%;position:relative;">
                                 <tbody>
-                                  <tr>
-                                    <td style="width: 50%: text-align: center">
-                                      <a href="#">
-                                        <img style="margin-right: auto; margin-left: auto; width: 252px;" src="http://i.imgur.com/0Gtv0Hy.png">
-                                      </a>
-                                    </td>
-                                    <td style="width: 50%: text-align: center">
-                                      <a href="#">
-                                        <img style="margin-right: auto; margin-left: auto; width: 252px;" src="http://i.imgur.com/0Gtv0Hy.png">
-                                      </a>
+                                  <tr style="padding-top:0;padding-bottom:0;padding-right:0;padding-left:0;vertical-align:top;text-align:left;">
+                                    <td style="word-break:break-word;-webkit-hyphens:none;-moz-hyphens:none;hyphens:none;border-collapse:collapse !important;vertical-align:top;margin-top:0;margin-bottom:0;margin-right:0;margin-left:0;text-align:left;font-size:9px;line-height:12px;padding-top:0px;padding-bottom:0px;padding-left:0px;position:relative;padding-right:0px;">
+                                      <table style="width: 100%;">
+                                        <tbody>
+                                          <tr>
+                                            <td style="text-align: center">
+                                              <a href="#" style="text-align: center">
+                                                <img src="http://i.imgur.com/0Gtv0Hy.png" style="margin-right: auto; margin-left: auto;">
+                                              </a>
+                                            </td>
+                                            <td style="text-align: center">
+                                              <a href="#" style="text-align: center">
+                                                <img src="http://i.imgur.com/0Gtv0Hy.png" style="margin-right: auto; margin-left: auto;">
+                                              </a>
+                                            </td>
+                                          </tr>
+                                        </tbody>
+                                      </table>
                                     </td>
                                   </tr>
                                 </tbody>
@@ -793,16 +801,16 @@ body.outlook p {
                               <table style='width:100%'>
                                 <tbody>
                                   <tr>
-                                    <td style="width: 50%">
-                                      <p style="text-align: center; margin-top: 30px; margin-bottom: 20px; font-size: 15px;color: #000000; letter-spacing:.18em; text-transform: uppercase; line-height: 16pt;">
+                                    <td style="width: 50%; vertical-align:top">
+                                      <p style="vertical-align:top; text-align: center; margin-top: 15px; margin-bottom: 20px; font-size: 15px;color: #000000; letter-spacing:.18em; text-transform: uppercase; line-height: 16pt;">
                                         Guess connect smartwatch<br>in white
                                       </p>
                                       <p style="text-align: center; font-size: 15px;color: #000000; letter-spacing:.18em; margin-bottom: 50px; line-height: 16pt;">
                                         $249.00
                                       </p>
                                     </td>
-                                    <td style="width: 50%">
-                                      <p style="text-align: center; margin-top: 30px; margin-bottom: 20px; font-size: 15px;color: #000000; letter-spacing:.18em; text-transform: uppercase; line-height: 16pt;">
+                                    <td style="width: 50%; vertical-align:top">
+                                      <p style="vertical-align:top; text-align: center; margin-top: 15px; margin-bottom: 20px; font-size: 15px;color: #000000; letter-spacing:.18em; text-transform: uppercase; line-height: 16pt;">
                                         Charlene shirred dress
                                       </p>
                                       <p style="text-align: center; font-size: 15px;color: #000000; letter-spacing:.18em; margin-bottom: 50px; line-height: 16pt;">
@@ -813,18 +821,26 @@ body.outlook p {
                                 </tbody>
                               </table>
           <! ---- Double Image 2---- >
-                              <table style='width:100%'>
+                              <table style="border-spacing:0;border-collapse:collapse;vertical-align:top;text-align:left;padding-top:0px;padding-bottom:0px;padding-right:0px;padding-left:0px;width:100%;position:relative;">
                                 <tbody>
-                                  <tr>
-                                    <td style="width: 50%: text-align: center">
-                                      <a href="#">
-                                        <img style="margin-right: auto; margin-left: auto; width: 252px;" src="http://i.imgur.com/0Gtv0Hy.png">
-                                      </a>
-                                    </td>
-                                    <td style="width: 50%: text-align: center">
-                                      <a href="#">
-                                        <img style="margin-right: auto; margin-left: auto; width: 252px;" src="http://i.imgur.com/0Gtv0Hy.png">
-                                      </a>
+                                  <tr style="padding-top:0;padding-bottom:0;padding-right:0;padding-left:0;vertical-align:top;text-align:left;">
+                                    <td style="word-break:break-word;-webkit-hyphens:none;-moz-hyphens:none;hyphens:none;border-collapse:collapse !important;vertical-align:top;margin-top:0;margin-bottom:0;margin-right:0;margin-left:0;text-align:left;font-size:9px;line-height:12px;padding-top:0px;padding-bottom:0px;padding-left:0px;position:relative;padding-right:0px;">
+                                      <table style="width: 100%;">
+                                        <tbody>
+                                          <tr>
+                                            <td style="text-align: center">
+                                              <a href="#" style="text-align: center">
+                                                <img src="http://i.imgur.com/0Gtv0Hy.png" style="margin-right: auto; margin-left: auto;">
+                                              </a>
+                                            </td>
+                                            <td style="text-align: center">
+                                              <a href="#" style="text-align: center">
+                                                <img src="http://i.imgur.com/0Gtv0Hy.png" style="margin-right: auto; margin-left: auto;">
+                                              </a>
+                                            </td>
+                                          </tr>
+                                        </tbody>
+                                      </table>
                                     </td>
                                   </tr>
                                 </tbody>
@@ -833,16 +849,16 @@ body.outlook p {
                               <table style='width:100%'>
                                 <tbody>
                                   <tr>
-                                    <td style="width: 50%">
-                                      <p style="text-align: center; margin-top: 30px; margin-bottom: 20px; font-size: 15px;color: #000000; letter-spacing:.18em; text-transform: uppercase; line-height: 16pt;">
+                                    <td style="width: 50%; vertical-align:top">
+                                      <p style="text-align: center; margin-top: 15px; margin-bottom: 20px; font-size: 15px;color: #000000; letter-spacing:.18em; text-transform: uppercase; line-height: 16pt;">
                                         Jessie denim Jumpsuite
                                       </p>
-                                      <p style="text-align: center; font-size: 15px;color: #000000; letter-spacing:.18em; margin-bottom: 50px; line-height: 16pt;">
+                                      <p style="vertical-align:top; text-align: center; font-size: 15px;color: #000000; letter-spacing:.18em; margin-bottom: 50px; line-height: 16pt;">
                                         $128.00
                                       </p>
                                     </td>
-                                    <td style="width: 50%">
-                                      <p style="text-align: center; margin-top: 30px; margin-bottom: 20px; font-size: 15px;color: #000000; letter-spacing:.18em; text-transform: uppercase; line-height: 16pt;">
+                                    <td style="width: 50%; vertical-align:top">
+                                      <p style="vertical-align:top; text-align: center; margin-top: 15px; margin-bottom: 20px; font-size: 15px;color: #000000; letter-spacing:.18em; text-transform: uppercase; line-height: 16pt; ">
                                         Noel sleevless<br>lace dress
                                       </p>
                                       <p style="text-align: center; font-size: 15px;color: #000000; letter-spacing:.18em; margin-bottom: 50px; line-height: 16pt;">
@@ -914,13 +930,13 @@ body.outlook p {
                                       <table style="width: 100%;">
                                         <tbody>
                                           <tr>
-                                            <td style="padding-bottom: 4em;">
-                                              <a href="#">
+                                            <td style="padding-bottom: 4em; text-align: center">
+                                              <a href="#" style="text-align: center">
                                                 <img src="http://i.imgur.com/0Gtv0Hy.png" style="margin-right: auto; margin-left: auto;">
                                               </a>
                                             </td>
-                                            <td style="padding-bottom: 4em;">
-                                              <a href="#">
+                                            <td style="padding-bottom: 4em; text-align: center">
+                                              <a href="#" style="text-align: center">
                                                 <img src="http://i.imgur.com/0Gtv0Hy.png" style="margin-right: auto; margin-left: auto;">
                                               </a>
                                             </td>
@@ -939,14 +955,14 @@ body.outlook p {
                                       <table style="width: 100%;">
                                         <tbody>
                                           <tr>
-                                            <td style="padding-bottom: 4em;">
-                                              <a href="#">
-                                                <img src="http://i.imgur.com/0Gtv0Hy.png" style="margin-right: auto; margin-left: auto;">
+                                            <td style="padding-bottom: 4em; text-align: center">
+                                              <a href="#" style="text-align: center">
+                                                <img src="http://i.imgur.com/0Gtv0Hy.png" style="text-align: center; margin-right: auto; margin-left: auto;">
                                               </a>
                                             </td>
-                                            <td style="padding-bottom: 4em;">
-                                              <a href="#">
-                                                <img src="http://i.imgur.com/0Gtv0Hy.png" style="margin-right: auto; margin-left: auto;">
+                                            <td style="padding-bottom: 4em; text-align: center">
+                                              <a href="#" style="text-align: center">
+                                                <img src="http://i.imgur.com/0Gtv0Hy.png" style="text-align: center; margin-right: auto; margin-left: auto;">
                                               </a>
                                             </td>
                                           </tr>
